--- a/projects/SideProject/SideProject.vcxproj
+++ b/projects/SideProject/SideProject.vcxproj
@@ -38,15 +38,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>false</LinkIncremental>
+    <LinkIncremental>
+    </LinkIncremental>
     <OutDir>$(SolutionDir)..\..\dist\</OutDir>
     <IntDir>$(SolutionDir)..\..\intermediate\$(Configuration)\</IntDir>
     <TargetName>$(ProjectName)_$(Configuration)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)..\..\dist\</OutDir>
-    <IntDir>$(SolutionDir)..\..\intermediate\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)..\..\dist</OutDir>
+    <IntDir>$(SolutionDir)..\..\intermediate\$(Configuration)</IntDir>
     <TargetName>$(ProjectName)_$(Configuration)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -56,7 +57,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\external\nowide;$(SolutionDir)..\..\external;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\external\nowide\;$(SolutionDir)..\..\external\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -74,7 +75,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\..\external\nowide;$(SolutionDir)..\..\external;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\external\nowide\;$(SolutionDir)..\..\external\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -97,6 +98,7 @@
     <ClInclude Include="..\..\source\Engine\IFramework.h" />
     <ClInclude Include="..\..\source\Engine\IGraphicsDriver.h" />
     <ClInclude Include="..\..\source\Engine\Input\Win32Input.h" />
+    <ClInclude Include="..\..\source\Engine\Logging\Logging.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\external\jsoncpp\jsoncpp.cpp" />
@@ -106,6 +108,7 @@
     <ClCompile Include="..\..\source\Engine\Framework\Win32Framework.cpp" />
     <ClCompile Include="..\..\source\Engine\Graphics\OpenGLGraphicsDriver.cpp" />
     <ClCompile Include="..\..\source\Engine\Input\Win32Input.cpp" />
+    <ClCompile Include="..\..\source\Engine\Logging\Logging.cpp" />
     <ClCompile Include="..\..\source\main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
