--- a/projects/SideProject/SideProject.vcxproj.filters
+++ b/projects/SideProject/SideProject.vcxproj.filters
@@ -22,11 +22,11 @@
     <Filter Include="Engine\Graphics">
       <UniqueIdentifier>{310db9be-644a-4e20-ab22-28d15315925b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Framework">
-      <UniqueIdentifier>{01a07877-8abe-4d4a-bc6c-bc5be3d02392}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Engine\Input">
       <UniqueIdentifier>{60b1b381-5580-4e02-9f3b-1373b6dcfaa2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Plantform">
+      <UniqueIdentifier>{01a07877-8abe-4d4a-bc6c-bc5be3d02392}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -63,14 +63,14 @@
     <ClInclude Include="..\..\source\Engine\OpenGLGraphicsDriver.h">
       <Filter>Engine\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\source\Engine\IFramework.h">
-      <Filter>Engine\Framework</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\source\Engine\Win32Framework.h">
-      <Filter>Engine\Framework</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\source\Engine\Win32Input.h">
       <Filter>Engine\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\Engine\IPlatform.h">
+      <Filter>Engine\Plantform</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\Engine\SDLPlatform.h">
+      <Filter>Engine\Plantform</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -93,11 +93,11 @@
     <ClCompile Include="..\..\source\Engine\OpenGLGraphicsDriver.cpp">
       <Filter>Engine\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\source\Engine\Win32Framework.cpp">
-      <Filter>Engine\Framework</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\source\Engine\Win32Input.cpp">
       <Filter>Engine\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\Engine\SDLPlatform.cpp">
+      <Filter>Engine\Plantform</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
