Adding in the assert handler and turning on the asserts that were commented out.

--- a/projects/SideProject/SideProject.vcxproj
+++ b/projects/SideProject/SideProject.vcxproj
@@ -113,6 +113,7 @@
     <ClCompile Include="..\..\external\jsoncpp\jsoncpp.cpp" />
     <ClCompile Include="..\..\external\nowide\src\convert.cpp" />
     <ClCompile Include="..\..\external\nowide\src\streambuf.cpp" />
+    <ClCompile Include="..\..\source\Engine\BasicMacros.cpp" />
     <ClCompile Include="..\..\source\Engine\DirectXGraphics.cpp" />
     <ClCompile Include="..\..\source\Engine\IPlatform.cpp" />
     <ClCompile Include="..\..\source\Engine\JSONConfig.cpp" />
