--- a/projects/SideProject/SideProject.vcxproj.filters
+++ b/projects/SideProject/SideProject.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="Engine\IO">
       <UniqueIdentifier>{26ff7b7c-c688-4cf8-9d1e-ad9e307035b4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Graphics\Shaders">
+      <UniqueIdentifier>{149b6978-8442-44c8-9c2d-b09ad2881080}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\external\jsoncpp\json\json.h">
@@ -108,6 +111,12 @@
     <ClInclude Include="..\..\source\Engine\FileIO.h">
       <Filter>Engine\IO</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\source\Engine\Image.h">
+      <Filter>Engine\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\source\Engine\Shader.h">
+      <Filter>Engine\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\source\main.cpp" />
@@ -159,5 +168,19 @@
     <ClCompile Include="..\..\source\Engine\FileIO.cpp">
       <Filter>Engine\IO</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\source\Engine\Image.cpp">
+      <Filter>Engine\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\source\Engine\Shader.cpp">
+      <Filter>Engine\Graphics</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\dist\shaders\Texture.frag">
+      <Filter>Engine\Graphics\Shaders</Filter>
+    </None>
+    <None Include="..\..\dist\shaders\Texture.vert">
+      <Filter>Engine\Graphics\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
